--- a/app/src/main/res/layout/fragment_basket_bsv_order.xml
+++ b/app/src/main/res/layout/fragment_basket_bsv_order.xml
@@ -9,23 +9,23 @@
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Заказ"
-        android:textSize="28sp"
+        android:text="@string/fragment_basket_bsv_order_title"
+        android:textSize="@dimen/fragment_basket_bsv_title_textSize"
         android:textColor="@android:color/black"
         />
 
     <TextView
         android:id="@+id/fragment_basket_bsv_container_addresses_title"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/fragment_basket_bsv_container_addresses_title_marginTop"
         android:layout_below="@id/fragment_basket_bsv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Выберите адрес"/>
+        android:text="@string/fragment_basket_bsv_order_choose"/>
 
     <HorizontalScrollView
         android:id="@+id/fragment_basket_bsv_hsv_container"
         android:layout_below="@+id/fragment_basket_bsv_container_addresses_title"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="@dimen/fragment_basket_bsv_hsv_container_marginTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -37,7 +37,7 @@
 
     <LinearLayout
         android:id="@+id/fragment_basket_bsv_persons_title"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/fragment_basket_bsv_persons_title_marginTop"
         android:orientation="horizontal"
         android:layout_below="@id/fragment_basket_bsv_hsv_container"
         android:layout_width="match_parent"
@@ -47,23 +47,23 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Количество персон:"
+            android:text="@string/fragment_basket_bsv_order_persons"
             />
 
         <ImageView
             android:id="@+id/fragment_basket_bsv_persons_plus"
             android:background="@drawable/fragment_menu_rv_item_icons"
-            android:padding="5dp"
+            android:padding="@dimen/fragment_basket_bsv_persons_plus_padding"
             android:src="@drawable/more"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            android:layout_margin="@dimen/fragment_basket_bsv_persons_plus_margin"
+            android:layout_width="@dimen/fragment_basket_bsv_persons_plus_width"
+            android:layout_height="@dimen/fragment_basket_bsv_persons_plus_height"/>
         <TextView
             android:id="@+id/fragment_basket_bsv_persons"
             android:layout_gravity="center"
-            android:text="1"
-            android:layout_margin="3dp"
+            android:text="@string/fragment_basket_bsv_order_default_persons"
+            android:layout_margin="@dimen/fragment_basket_bsv_persons_margin"
             android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -71,18 +71,18 @@
         <ImageView
             android:id="@+id/fragment_basket_bsv_persons_minus"
             android:background="@drawable/fragment_menu_rv_item_icons"
-            android:padding="5dp"
+            android:padding="@dimen/fragment_basket_bsv_persons_minus_padding"
             android:src="@drawable/minus"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
+            android:layout_margin="@dimen/fragment_basket_bsv_persons_minus_margin"
+            android:layout_width="@dimen/fragment_basket_bsv_persons_minus_width"
+            android:layout_height="@dimen/fragment_basket_bsv_persons_minus_height"/>
     </LinearLayout>
 
     <TextView
         android:id="@+id/fragment_basket_bsv_desc_title"
-        android:layout_marginTop="5dp"
-        android:text="Особые замечания"
+        android:layout_marginTop="@dimen/fragment_basket_bsv_desc_title_marginTop"
+        android:text="@string/fragment_basket_bsv_order_desc_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_basket_bsv_persons_title"
@@ -91,20 +91,20 @@
     <EditText
         android:id="@+id/fragment_basket_bsv_desc_et"
         android:layout_below="@id/fragment_basket_bsv_desc_title"
-        android:hint="Код от домофона:1337"
+        android:hint="@string/fragment_basket_bsv_order_desc_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/fragment_basket_bsv_button_for_order"
-        android:padding="10dp"
-        android:text="Подтвердить заказ"
+        android:padding="@dimen/fragment_basket_bsv_button_for_order_padding"
+        android:text="@string/fragment_basket_bsv_order_button_order"
         android:textAllCaps="false"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="@dimen/fragment_basket_bsv_button_for_order_marginTop"
+        android:layout_marginBottom="@dimen/fragment_basket_bsv_button_for_order_marginBottom"
         android:layout_below="@id/fragment_basket_bsv_desc_et"
-        android:layout_width="210dp"
+        android:layout_width="@dimen/fragment_basket_bsv_button_for_order_width"
         android:layout_height="wrap_content"
         android:background="@drawable/fragment_basket_button_for_order"/>
 
