--- a/app/src/main/res/layout/fragment_basket_rv_item.xml
+++ b/app/src/main/res/layout/fragment_basket_rv_item.xml
@@ -10,42 +10,39 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="@dimen/fragment_basket_item_LL_container_padding"
         >
         <TextView
             android:id="@+id/fragment_basket_item_count_of_items_for_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="@+id/fragment_basket_item_times"
-            android:text="3"/>
+            android:layout_alignParentStart="@+id/fragment_basket_item_times" />
         <TextView
             android:id="@+id/fragment_basket_item_times"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/fragment_basket_item_times_marginStart"
+            android:layout_marginEnd="@dimen/fragment_basket_item_times_marginEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/fragment_basket_item_count_of_items_for_order"
-            android:text="X"/>
+            android:text="@string/fragment_basket_rvitem_times"/>
         <TextView
             android:id="@+id/fragment_basket_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/fragment_basket_item_times"
-            android:text="Филадельфия"/>
+            android:layout_toEndOf="@id/fragment_basket_item_times" />
 
         <TextView
             android:id="@+id/fragment_basket_item_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/fragment_basket_item_price_type"
-            android:text="2000"/>
+            android:layout_toStartOf="@+id/fragment_basket_item_price_type" />
         <TextView
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="@dimen/fragment_basket_item_price_type_marginStart"
             android:id="@+id/fragment_basket_item_price_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="P"/>
+            android:text="@string/fragment_basket_rvitem_sign"/>
     </RelativeLayout>
 
 
@@ -55,12 +52,12 @@
     <LinearLayout
         android:id="@+id/fragment_basket_item_LL_desc_container"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:padding="@dimen/fragment_basket_item_LL_desc_container_padding"
         android:animateLayoutChanges="true"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_gravity="center|top"
@@ -73,13 +70,13 @@
                 android:id="@+id/fragment_basket_item_desc_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="21sp" />
+                android:textSize="@dimen/fragment_basket_item_desc_title_textSize" />
 
             <TextView
                 android:id="@+id/fragment_basket_item_desc_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="1dp"
+                android:padding="@dimen/fragment_basket_item_desc_description_padding"
                 />
 
             <TextView
@@ -89,21 +86,22 @@
                 />
 
             <LinearLayout
+                android:id="@+id/fragment_basket_item_desc_ll_icons"
                 android:layout_gravity="bottom"
                 android:gravity="bottom"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="@dimen/fragment_basket_item_desc_ll_icons_height"
                 android:orientation="horizontal">
 
 
 
                 <ImageView
                     android:id="@+id/fragment_basket_item_desc_icon_plus"
-                    android:layout_width="26dp"
+                    android:layout_width="@dimen/fragment_basket_item_desc_icon_plus_width"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="@dimen/fragment_basket_item_desc_icon_plus_marginEnd"
                     android:background="@drawable/fragment_menu_rv_item_icons"
-                    android:padding="6dp"
+                    android:padding="@dimen/fragment_basket_item_desc_icon_plus_padding"
                     android:src="@drawable/more" />
 
                 <TextView
@@ -112,33 +110,34 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:textColor="@android:color/black"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/fragment_basket_item_desc_count_of_item_textSize"
                      />
 
                 <ImageView
                     android:id="@+id/fragment_basket_item_desc_icon_minus"
-                    android:layout_width="26dp"
+                    android:layout_width="@dimen/fragment_basket_item_desc_icon_minus_width"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="@dimen/fragment_basket_item_desc_icon_minus_marginStart"
+                    android:layout_marginEnd="@dimen/fragment_basket_item_desc_icon_minus_marginEnd"
                     android:background="@drawable/fragment_menu_rv_item_icons"
-                    android:padding="6dp"
+                    android:padding="@dimen/fragment_basket_item_desc_icon_minus_padding"
                     android:src="@drawable/minus"
                     />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:id="@+id/fragment_basket_item_desc_container_icon"
+            android:layout_width="@dimen/fragment_basket_item_desc_container_icon_width"
+            android:layout_height="@dimen/fragment_basket_item_desc_container_icon_height"
             android:gravity="center"
             android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/fragment_basket_item_desc_icon"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="@dimen/fragment_basket_item_desc_icon_width"
+                android:layout_height="@dimen/fragment_basket_item_desc_icon_height"
                 android:scaleType="fitXY"
                 />
         </LinearLayout>
