--- a/app/src/main/res/layout/fragment_menu_rv_item.xml
+++ b/app/src/main/res/layout/fragment_menu_rv_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="@dimen/fragment_menu_rv_item_padding">
 
     <LinearLayout
         android:layout_gravity="center"
@@ -15,13 +15,13 @@
             android:id="@+id/fragment_menu_rv_item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="21sp" />
+            android:textSize="@dimen/fragment_menu_rv_item_title_textSize" />
 
         <TextView
             android:id="@+id/fragment_menu_rv_item_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="1dp"
+            android:padding="@dimen/fragment_menu_rv_item_description_padding"
             />
 
         <TextView
@@ -34,26 +34,26 @@
             android:layout_gravity="bottom"
             android:gravity="bottom"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/fragment_menu_rv_item_container_icons"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/fragment_menu_rv_item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="@dimen/fragment_menu_rv_item_price_marginEnd"
                 android:gravity="center"
 
                 android:textColor="@android:color/black"
-                android:textSize="15sp" />
+                android:textSize="@dimen/fragment_menu_rv_item_price_textSize" />
 
             <ImageView
                 android:id="@+id/fragment_menu_rv_item_icon_plus"
-                android:layout_width="26dp"
+                android:layout_width="@dimen/fragment_menu_rv_item_icon_plus_width"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/fragment_menu_rv_item_icon_plus_marginEnd"
                 android:background="@drawable/fragment_menu_rv_item_icons"
-                android:padding="6dp"
+                android:padding="@dimen/fragment_menu_rv_item_icon_plus_padding"
                 android:src="@drawable/more" />
 
             <TextView
@@ -62,33 +62,33 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/fragment_menu_rv_item_count_of_item_textSize"
                 android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/fragment_menu_rv_item_icon_minus"
-                android:layout_width="26dp"
+                android:layout_width="@dimen/fragment_menu_rv_item_icon_minus_width"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="@dimen/fragment_menu_rv_item_icon_minus_marginStart"
+                android:layout_marginEnd="@dimen/fragment_menu_rv_item_icon_minus_marginEnd"
                 android:background="@drawable/fragment_menu_rv_item_icons"
-                android:padding="6dp"
+                android:padding="@dimen/fragment_menu_rv_item_icon_minus_padding"
                 android:src="@drawable/minus"
                 android:visibility="invisible" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="@dimen/fragment_menu_rv_item_container_mainicon_width"
+        android:layout_height="@dimen/fragment_menu_rv_item_container_mainicon_height"
         android:gravity="center"
         android:layout_gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/fragment_menu_rv_item_icon"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/fragment_menu_rv_item_icon_width"
+            android:layout_height="@dimen/fragment_menu_rv_item_icon_height"
             android:scaleType="fitXY"
             />
     </LinearLayout>
