--- a/app/src/main/res/layout/fragment_profile_fragment_addresses_add_new_bsv.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_addresses_add_new_bsv.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp"
+    android:padding="@dimen/fragment_profile_fragment_addresses_add_new_bsv_padding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,25 +11,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:textSize="28sp"
-        android:text="Добавление нового адреса"
+        android:textSize="@dimen/fragment_profile_fragment_addresses_add_new_title_textSize"
+        android:text="@string/fragment_profile_fragment_addresses_add_new_title"
         android:layout_alignParentTop="true"/>
 
 
 
     <LinearLayout
         android:id="@+id/fragment_profile_fragment_addresses_title_of_address"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="@dimen/fragment_profile_fragment_addresses_title_of_address_marginTop"
         android:layout_below="@id/fragment_profile_fragment_addresses_add_new_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <TextView
-            android:text="Название*"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_titleUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"/>
+            android:textSize="@dimen/fragment_profile_fragment_addresses_title_of_address_textSize"/>
 
         <EditText
             android:id="@+id/fragment_profile_fragment_addresses_add_new_et_title"
@@ -42,17 +42,17 @@
 
     <LinearLayout
         android:id="@+id/fragment_profile_fragment_addresses_district_of_address"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="@dimen/fragment_profile_fragment_addresses_district_of_address_marginTop"
         android:layout_below="@id/fragment_profile_fragment_addresses_title_of_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <TextView
-            android:text="Район"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_districtUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"/>
+            android:textSize="@dimen/fragment_profile_fragment_addresses_district_of_address_textSize"/>
 
         <EditText
             android:id="@+id/fragment_profile_fragment_addresses_add_new_et_district"
@@ -71,7 +71,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:text="Улица*"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_streetUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -91,7 +91,7 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Дом*"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_houseUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -114,7 +114,7 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Корпус"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_corpusUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -137,7 +137,7 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Подъезд"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_porchUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -160,7 +160,7 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Этаж"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_floorUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -182,7 +182,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:text="Квартира"
+            android:text="@string/fragment_profile_fragment_addresses_add_new_flatUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
@@ -199,7 +199,7 @@
         android:id="@+id/fragment_profile_fragment_addresses_add_new_desc"
         android:layout_below="@id/fragment_profile_fragment_addresses_flat_of_address"
         android:layout_marginTop="10dp"
-        android:text="* - обязательно к заполнению"
+        android:text="@string/fragment_profile_fragment_addresses_add_new_mustDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -210,7 +210,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/login_button_selector"
         android:textAllCaps="false"
-        android:text="Добавить"
+        android:text="@string/fragment_profile_fragment_addresses_add_new_buttonAdd"
         android:textSize="20sp"
         android:layout_centerHorizontal="true"
         android:layout_width="210dp"
