--- a/app/src/main/res/layout/fragment_profile_fragment_info.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_info.xml
@@ -3,21 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp">
+        android:padding="@dimen/fragment_profile_fragment_info_padding">
 
         <ImageView
             android:id="@+id/fragment_profile_fragment_info_usericon"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/fragment_profile_fragment_info_usericon_width"
+            android:layout_height="@dimen/fragment_profile_fragment_info_usericon_height"
             android:src="@drawable/fragment_profile_fragment_info_icon_man"/>
 
     <RelativeLayout
@@ -25,7 +21,7 @@
         android:layout_below="@id/fragment_profile_fragment_info_usericon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp">
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_name_container_marginTop">
 
         <TextView
             android:id="@+id/fragment_profile_fragment_info_name_title"
@@ -35,7 +31,7 @@
 
     <EditText
         android:id="@+id/fragment_profile_fragment_info_name"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_name_marginTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -47,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/fragment_profile_fragment_info_name_commit_marginEnd"
             android:src="@android:drawable/ic_menu_edit"
             android:visibility="invisible"/>
     </RelativeLayout>
@@ -60,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_profile_fragment_info_name_container"
-        android:layout_marginTop="23dp">
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_email_container_marginTop">
         <TextView
             android:id="@+id/fragment_profile_fragment_info_email_title"
             android:layout_width="wrap_content"
@@ -69,7 +65,7 @@
 
         <EditText
         android:id="@+id/fragment_profile_fragment_info_email"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_email_marignTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -81,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/fragment_profile_fragment_info_email_commit_marginEnd"
             android:src="@android:drawable/ic_menu_edit"
             android:visibility="invisible"/>
     </RelativeLayout>
@@ -93,7 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_profile_fragment_info_email_container"
-        android:layout_marginTop="23dp">
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_phone_container_marginTop">
     <TextView
         android:id="@+id/fragment_profile_fragment_info_phone_title"
         android:layout_width="wrap_content"
@@ -101,7 +97,7 @@
         android:text="@string/fragment_profile_section_info_phone_title"/>
     <EditText
         android:id="@+id/fragment_profile_fragment_info_phone"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="@dimen/fragment_profile_fragment_info_phone_marginTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="false"
@@ -113,24 +109,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/fragment_profile_fragment_info_phone_commit_marginEnd"
             android:src="@android:drawable/ic_menu_edit"
             android:visibility="invisible"/>
     </RelativeLayout>
 
         <Button
             android:id="@+id/fragment_profile_fragment_info_button_logout"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/fragment_profile_fragment_info_button_logout_marginTop"
             android:layout_below="@id/fragment_profile_fragment_info_phone_container"
-            android:layout_width="150dp"
+            android:layout_width="@dimen/fragment_profile_fragment_info_button_logout_width"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:layout_centerHorizontal="true"
             android:background="@drawable/fragment_profile_fragment_info_button_selector"
-            android:text="Выйти"/>
+            android:text="@string/fragment_profile_fragment_info_button_exit"/>
 
     </RelativeLayout>
 
-    </ScrollView>
 
 </RelativeLayout>
