--- a/app/src/main/res/layout/fragment_profile_section.xml
+++ b/app/src/main/res/layout/fragment_profile_section.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_profile_sections"
-        android:layout_marginTop="10dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_profile_sections"
+        android:layout_marginTop="@dimen/fragment_profile_sections_marginTop"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -9,64 +10,64 @@
         <LinearLayout
             android:id="@+id/fragment_profile_section_orders"
             android:background="@drawable/fragment_profile_section_selector"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/fragment_profile_section_orders_width"
+            android:layout_height="@dimen/fragment_profile_section_orders_height"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="5dp"
+            android:padding="@dimen/fragment_profile_section_orders_padding"
             >
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="@dimen/fragment_profile_section_orders_image_width"
+                android:layout_height="@dimen/fragment_profile_section_orders_image_height"
                 android:src="@drawable/fragment_profile_section_icon_orders" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:text="Заказы"/>
+                android:text="@string/fragment_profile_section_orders_title"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/fragment_profile_section_info"
             android:background="@drawable/fragment_profile_section_selector"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
+            android:layout_width="@dimen/fragment_profile_section_info_width"
+            android:layout_height="@dimen/fragment_profile_section_info_height"
+            android:layout_marginEnd="@dimen/fragment_profile_section_info_marginEnd"
+            android:layout_marginStart="@dimen/fragment_profile_section_info_marginStart"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="5dp"
+            android:padding="@dimen/fragment_profile_section_info_padding"
             >
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="@dimen/fragment_profile_section_info_image_width"
+                android:layout_height="@dimen/fragment_profile_section_info_image_height"
                 android:src="@drawable/fragment_profile_section_icon_personal_information" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:text="Личное"/>
+                android:text="@string/fragment_profile_section_info_title" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/fragment_profile_section_addresses"
             android:background="@drawable/fragment_profile_section_selector"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/fragment_profile_section_addresses_width"
+            android:layout_height="@dimen/fragment_profile_section_addresses_height"
             android:orientation="vertical"
-            android:padding="5dp"
+            android:padding="@dimen/fragment_profile_section_addresses_padding"
             android:gravity="center"
             >
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="@dimen/fragment_profile_section_addresses_image_width"
+                android:layout_height="@dimen/fragment_profile_section_addresses_image_height"
                 android:src="@drawable/fragment_profile_section_icon_addresses" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
 
-                android:text="Адреса"/>
+                android:text="@string/fragment_profile_section_addresses_title"/>
         </LinearLayout>
 </LinearLayout>
