--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -4,6 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment_basket.fragment_basket">
+    <ProgressBar
+        android:id="@+id/fragment_basket_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
     <LinearLayout
         android:id="@+id/fragment_basket_LL_total_summ"
         android:layout_marginTop="@dimen/fragment_basket_LL_total_marginTop"
