--- a/app/src/main/res/layout/fragment_profile_fragment_info.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_info.xml
@@ -3,10 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/fragment_profile_fragment_info_padding">
 
         <ImageView
             android:id="@+id/fragment_profile_fragment_info_usericon"
@@ -125,7 +121,11 @@
             android:background="@drawable/fragment_profile_fragment_info_button_selector"
             android:text="@string/fragment_profile_fragment_info_button_exit"/>
 
-    </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/fragment_profile_fragment_info_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
